--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -4,14 +4,16 @@
     max-width: 400px;
     display: flex;
     flex-direction: column;
-    height: 102vh;
+    height: auto;
+
 
 }
 
 .login__wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    margin-top: 70px;
+    /*justify-content: center;*/
     height: 100%;
 }
 
@@ -113,26 +115,14 @@
 
 
 
-/*.login__link {*/
-/*    width: 100%;*/
-/*    cursor: pointer;*/
-/*    text-align: center;*/
-/*    min-height: 50px;*/
-/*    padding: 0;*/
-/*    border: none;*/
-/*    background-color: rgba(0, 0, 0, 0);*/
-/*    color: #000000;*/
-/*    font-size: 16px;*/
-/*}*/
+
 
 .login__signin {
     width: 100%;
     display: flex;
     justify-content: center;
 
-
 }
-
 
 .login__signin > p {
     color: #8B8B8B;
@@ -143,8 +133,6 @@
     font-weight: 400;
     line-height: normal;
 }
-
-
 
 .login__link {
     display: flex;
@@ -157,7 +145,7 @@
     cursor: pointer;
 }
 
-.register__login-link:hover {
+.login__link:hover {
     opacity: 0.6;
 }
 
@@ -175,8 +163,45 @@
     text-align: start;
 }
 
+
 @media (max-width: 768px) {
-    .login {
-        height: 101vh;
+    .login__wrapper {
+        margin: 232px  0 0 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
+    }
+
+}
+
+@media (max-width: 560px) {
+    .login__wrapper {
+        margin: 56px  30px 0 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+    .login__welcome {
+        margin: 50px 0 0 0;
+        width: 100%;
+        text-align: center;
+    }
+    .login__form {
+        margin: 40px auto 0 auto;
+    }
+    .login__button {
+        margin-top: 267px;
+        font-size: 12px;
+    }
+
+    .login__signin > p {
+        font-size: 12px;
+    }
+    .login__link {
+        font-size: 12px;
+
     }
 }
