--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -1,10 +1,9 @@
 .not-found {
-    margin: 0 auto;
+    margin: 245px auto 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 126vh;
     max-width: 1280px;
 
 }
@@ -52,7 +51,24 @@
 
 @media (max-width: 768px) {
     .not-found {
-        height: 118vh;
+        margin-top: 406px;
     }
 
+}
+
+@media (max-width: 560px) {
+    .not-found {
+        margin-top: 329px;
+    }
+    .not-found__link {
+        margin-top: 284px;
+        font-size: 12px;
+    }
+    .not-found__title {
+        font-size: 80px;
+    }
+    .not-found__text {
+        font-size: 12px;
+        margin-top: 10px;
+    }
 }
