--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -42,11 +42,11 @@
     font-weight: 400;
     line-height: normal;
     text-decoration: none;
-    transition: ease 0.3s;
+    transition: opacity 0.4s;
 }
 
 .not-found__link:hover {
-    opacity: 0.6;
+    opacity: 0.7;
 }
 
 @media (max-width: 768px) {
