--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -27,14 +27,17 @@
 
 
 .portfolio-list__item {
-    padding-bottom: 19px;
+    padding-bottom: 8px;
     border-bottom: 1px solid #424242;
     width: 100%;
-    display: flex;
-    justify-content: space-between;
+    list-style: none;
+
 }
 
 .portfolio__link {
+
+    display: flex;
+    justify-content: space-between;
     padding-top: 20px;
     color: #FFF;
     text-decoration: none;
@@ -44,7 +47,11 @@
     font-weight: 400;
     line-height: 50px; /* 166.667% */
     letter-spacing: -1.2px;
+    transition: opacity .4s;
+}
 
+.portfolio__link:hover {
+    opacity: .7;
 }
 
 .portfolio-list__item:last-child {
@@ -52,7 +59,6 @@
 }
 
 .portfolio__link-arrow {
-    padding-top: 20px;
     width: 29px;
     height: 60px;
     color: #FFF;
@@ -77,6 +83,7 @@
         line-height: 50px; /* 178.571% */
         letter-spacing: -1.12px;
     }
+
 }
 
 @media (max-width: 680px) {
@@ -109,5 +116,11 @@
         font-size: 18px;
         line-height: 28px; /* 155.556% */
         letter-spacing: -0.72px;
+    }
+}
+
+@media (max-width: 560px) {
+    .portfolio__link {
+        height: 60px;
     }
 }
