--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -98,7 +98,6 @@
     margin-top: 180px;
     width: 100%;
     height: 45px;
-    transition: ease 0.4s;
     cursor: pointer;
     color: #FFF;
     text-align: center;
@@ -107,10 +106,11 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    transition: opacity .4s;
 }
 
 .login__button:hover {
-    background-color: rgba(66, 133, 244, 0.6);
+    opacity: .8;
 }
 
 
@@ -141,12 +141,12 @@
     margin-left: 6px;
     text-decoration: none;
     color: #4285F4;
-    transition: ease 0.4s;
+    transition: opacity .4s;
     cursor: pointer;
 }
 
 .login__link:hover {
-    opacity: 0.6;
+    opacity: 0.7;
 }
 
 
