--- a/src/components/MainHeader/MainHeader.css
+++ b/src/components/MainHeader/MainHeader.css
@@ -35,6 +35,11 @@
     font-style: normal;
     font-weight: 500;
     line-height: 16px; /* 133.333% */
+    transition: opacity .4s;
+}
+
+.header__btn:hover {
+    opacity: .8;
 }
 
 .header__btn:last-child {
