--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -98,7 +98,7 @@
     margin-top: 70px;
     width: 100%;
     height: 45px;
-    transition: ease 0.4s;
+    transition: opacity .4s;
     cursor: pointer;
     color: #FFF;
     text-align: center;
@@ -110,7 +110,7 @@
 }
 
 .register__button:hover {
-    background-color: rgba(66, 133, 244, 0.6);
+    opacity: .8;
 }
 
 
@@ -141,12 +141,12 @@
     margin-left: 6px;
     text-decoration: none;
     color: #4285F4;
-    transition: ease 0.4s;
+    transition: opacity .4s;
     cursor: pointer;
 }
 
-.register__register-link:hover {
-    opacity: 0.6;
+.register__link:hover {
+    opacity: .7;
 }
 
 
