--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
-    max-width: 1140px;
+    max-width: 1280px;
     margin: 0 auto;
-    padding-bottom: 20px;
+    padding: 0 70px 20px 70px;
 }
 
 
@@ -72,6 +72,13 @@
     margin-right: 0;
 }
 
+@media (max-width: 768px) {
+    .footer {
+        padding: 0 30px 20px 30px;
+    }
+}
+
+
 @media (max-width: 680px) {
     .footer {
         display: flex;
@@ -107,5 +114,11 @@
         color: #8B8B8B;
         font-size: 12px;
 
+    }
+}
+
+@media (max-width: 320px) {
+    .footer {
+        padding: 0 10px 20px 10px;
     }
 }
