--- a/src/components/MainHeader/MainHeader.css
+++ b/src/components/MainHeader/MainHeader.css
@@ -30,6 +30,7 @@
     outline: none;
     cursor: pointer;
     text-decoration: none;
+    color: #000;
     font-family: Inter, serif;
     font-size: 12px;
     font-style: normal;
