--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,4 +1,4 @@
-.card-list__wrapper {
+.films {
     max-width: 1200px;
     margin: 79px auto 0 auto;
     display: flex;
@@ -32,7 +32,7 @@
 
 
 @media (max-width: 719px) {
-    .card-list__wrapper {
+    .films {
         margin-top: 50px;
     }
 }
