--- a/src/components/SearchForm/SearchForm.module.css
+++ b/src/components/SearchForm/SearchForm.module.css
@@ -1,6 +1,11 @@
+.navigation {
+
+    margin: 0 auto;
+}
+
 .searchForm {
 
-    max-width: 100%;
+    max-width: 1280px;
     margin: 80px auto 0 auto;
     display: flex;
     justify-content: center;
