--- a/src/pages/Movies/Movies.css
+++ b/src/pages/Movies/Movies.css
@@ -5,13 +5,13 @@
 
 }
 
-.movies .footer {
-    margin-top: 159px;
+.movies {
+    margin-bottom: 159px;
 }
 
 .movies__hr {
     margin: 0 auto;
-    width: 90%;
+    max-width: 90%;
     height: 1px;
     border-color: #424242;
 }
@@ -40,29 +40,33 @@
 }
 
 @media (max-width: 768px) {
-    .movies .footer {
-        margin: 159px 30px 0 30px
+    .movies {
+        margin-bottom: 159px
     }
     .movies__btn-more {
         margin: 61px auto 0 auto;
     }
     .movies__hr {
-        width: 93%;
+        max-width: 93%;
+        margin: 0 30px;
 
     }
 }
 
 @media (max-width: 680px) {
-    .movies .footer{
-        margin: 160px 10px 0 10px
+    .movies {
+        margin-bottom: 160px
 
     }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 560px) {
     .movies__btn-more {
         padding: 0 40px;
         width: 240px;
+    }
+    .movies__hr {
+        margin: 0 14px;
     }
 }
 
