--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,4 +1,4 @@
-.logo__link {
+.logo {
     margin: 0;
     padding: 0;
     height: 38px;
@@ -6,6 +6,6 @@
     transition: opacity .4s;
 }
 
-.logo__link:hover {
+.logo:hover {
     opacity: .7;
 }
