--- a/src/components/SearchForm/SearchForm.module.css
+++ b/src/components/SearchForm/SearchForm.module.css
@@ -30,7 +30,7 @@
     margin: 0 14px 0 0;
     width: 44px;
     height: 44px;
-    background: url("../../images/find-3.svg");
+    background: url("../../images/svg/find-3.svg");
     background-size: cover;
     border: none;
     cursor: pointer;
