--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -3,6 +3,13 @@
     min-height: 100%;
     list-style: none;
     position: relative;
+    display: grid;
+    grid-template-rows: 80% 20%;
+}
+
+.card__link {
+    width: 100%;
+    height: 100%;
 }
 
 .card__btn-save {
@@ -59,7 +66,7 @@
 
 .card__img {
     width: 100%;
-    min-height: 0;
+    height: 100%;
     border-radius: 10px;
 }
 
