--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,6 +1,6 @@
 .card {
     max-width: 100%;
-    min-height: 100%;
+    height: 100%;
     list-style: none;
     position: relative;
     display: grid;
@@ -67,6 +67,7 @@
 .card__img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
     border-radius: 10px;
 }
 
@@ -109,7 +110,7 @@
 
 @media (max-width: 768px) {
     .card__description {
-        margin-top: 22px;
+        margin-top: 0;
         justify-content: space-between;
     }
 
