--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -12,18 +12,18 @@
     padding: 0 30px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-auto-rows: auto;
+    grid-auto-rows: 250px;
     grid-gap: 30px;
-    row-gap: 57px;
-    grid-auto-flow: row;
+    row-gap: 40px;
     justify-content: center;
     align-content: center;
+
 }
 
 
 @media (max-width: 768px) {
     .card-list {
-        row-gap: 45px;
+        row-gap: 27px;
 
     }
 
@@ -39,7 +39,8 @@
 
 @media (max-width: 320px) {
     .card-list {
-        grid-gap: 37px;
+        grid-gap: 25px;
+        grid-auto-rows: 213px;
     }
 }
 /*@media (max-width: 667px) {*/
