--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -32,7 +32,7 @@
     font-size: 10px;
     font-style: normal;
     font-weight: 400;
-    line-height: 9px; /* 90% */
+    line-height: 9px;
     cursor: pointer;
     transition: opacity .4s;
 }
@@ -69,6 +69,7 @@
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
+
 }
 
 .card__title {
@@ -105,7 +106,7 @@
     font-size: 11px;
     font-style: normal;
     font-weight: 400;
-    line-height: 10px; /* 90.909% */
+    line-height: 10px;
 }
 
 @media (max-width: 768px) {
