--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .card-list {
@@ -20,11 +21,37 @@
 
 }
 
+.card-list__btn-more {
+    border: 1px solid #424242;
+    border-radius: 5px;
+    width: 320px;
+    min-height: 36px;
+    background: transparent;
+    margin: 75px auto 0 auto;
+    display: block;
+    color: #fff;
+    text-align: center;
+    font-family: Inter, serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    cursor: pointer;
+    transition: opacity .4s;
+}
+
+.card-list__btn-more:hover {
+    opacity: .8;
+}
+
 
 @media (max-width: 768px) {
     .card-list {
         row-gap: 27px;
 
+    }
+    .card-list__btn-more {
+        margin: 61px auto 0 auto;
     }
 
 }
@@ -35,6 +62,14 @@
     .films {
         margin-top: 50px;
     }
+}
+
+@media (max-width: 560px) {
+    .card-list__btn-more {
+        padding: 0 40px;
+        width: 240px;
+    }
+
 }
 
 @media (max-width: 320px) {
