--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -4,6 +4,7 @@
 
 }
 
+
 .profile-list__input {
 
     min-height: 20px;
@@ -83,7 +84,7 @@
 }
 
 .profile__btn-container {
-    width: fit-content;
+    max-width: 410px;
 
     margin: 186px auto 0 auto;
     display: flex;
@@ -104,6 +105,21 @@
     line-height: normal;
     cursor: pointer;
     transition: opacity .4s;
+}
+
+.profile__btn_type_submit {
+    width: 100%;
+    height: 45px;
+    flex-shrink: 0;
+    border-radius: 3px;
+    background: #3456F3;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter, serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 
 .profile__btn:hover {
