--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -109,7 +109,17 @@
     font-weight: 400;
     line-height: normal;
     cursor: pointer;
-    transition: opacity .4s;
+    transition: opacity .4s, background-color .4s;
+}
+
+.profile__btn:disabled {
+    background: #F8F8F8;
+    color: #C2C2C2;
+}
+
+.profile__btn:disabled:hover {
+    opacity: 1;
+    cursor: auto;
 }
 
 .profile__btn_type_submit {
@@ -129,6 +139,17 @@
 
 .profile__btn:hover {
     opacity: .8;
+}
+
+.profile__error-text {
+    width: 100%;
+    color: #FF004C;
+    text-align: center;
+    font-family: Inter, serif;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 .profile__btn_color_red {
