fix: validationProfile && response

--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -152,6 +152,17 @@
     line-height: normal;
 }
 
+.profile__response-text {
+    width: 100%;
+    color: #fff;
+    text-align: center;
+    font-family: Inter, serif;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
 .profile__btn_color_red {
     color: #EE3465;
 }
