--- a/src/pages/SavedMovies/SavedMovies.css
+++ b/src/pages/SavedMovies/SavedMovies.css
@@ -1,6 +1,6 @@
 .saved-movies {
     max-width: 1280px;
-    margin: 0 auto;
+    margin: 0 auto 160px auto;
 }
 .saved-movies__hr {
     width: 90%;
