--- a/src/components/MainHeader/MainHeader.css
+++ b/src/components/MainHeader/MainHeader.css
@@ -57,14 +57,12 @@
 @media (max-width: 768px) {
     .header {
         padding: 0 10px;
-        margin: 0 20px;
     }
 }
 
 @media (max-width: 320px) {
     .header {
-        padding: 0;
-        margin: 0 14px;
+        padding: 0 14px;
     }
     .header__btn {
         font-size: 10px;
